<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ElectroFix</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="last_name">Vezetéknév</string>
    <string name="first_name">Keresztnév</string>
    <string name="email">E-mail cím</string>
    <string name="password_confirm">Jelszó megerősítése</string>
    <string name="cancel">Vissza</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Cím</string>
    <string name="appointment_book">Időpontfoglalás</string>
    <string name="my_appointments">Időpontjaim</string>
    <string name="contacts">Elérhetőségek</string>
    <string name="welcome">Üdvözöljük!</string>
    <string name="device_to_check">Megvizsgálni kívánt eszköz:</string>
    <string name="description">Probléma leírása, egyéb eszköz esetén az eszközt is tűntesse fel itt!</string>
    <string name="choose_date">Válasszon időpontot!</string>
    <string name="date_picker">Dátum választó</string>
    <string name="time_picker">Idő választó</string>
    <string name="sign_out">Kijelentkezés</string>
    <string name="contacts_list">Cím: vmi \n Postacím: vmi \n Telefonszám: vmi \n E-mail: vmi</string>
    <string name="device">Eszköz</string>
    <string name="date">Dátum</string>
    <string name="description_1">Leírás</string>
    <string name="update">Szerkesztés</string>
    <string name="delete">Törlés</string>

    <string-array name="phone_types">
        <item>Otthoni</item>
        <item>Mobil</item>
        <item>Munkahelyi</item>
        <item>Egyéb</item>
    </string-array>

    <string-array name="device_types">
        <item>asd</item>
        <item>fgh</item>
        <item>jkl</item>
        <item>qwe</item>
    </string-array>
</resources>